[package]
name = "model_sync"
version = "0.1.0"
edition = "2024"

[dependencies]
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
relative-path = { version = "1.9.3", features = ["serde"] }
log = "0.4"
env_logger = "0.11.8"
structopt = { version = "0.3.26", features = ["color"] }
serde_json = "1.0"
ring = "0.17.14"
data-encoding = "2.9.0"
reqwest = { version = "0.12.15", features = ["json", "blocking"] }
